--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
+.ipynb_checkpoints/
 
 # IPython# Created by .ignore support plugin (hsz.mobi)
 ### JupyterNotebooks template
